Import socket.io

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="videos">
       <video class="video-player" id="local-video" autoplay playsinline></video>
       <video class="video-player" id="remote-video" autoplay playsinline></video>
+      <script src="https://모도코.com/socket.io/socket.io.js"></script>
     </div>
   </body>
   <script src="main.js"></script>
